@@ -1,3 +1,9 @@
+Travel::Status::DE::IRIS 1.33 - Sat Oct 05 2019
+
+    * Fix $result->route_pre / route_post accessors providing bogus data
+      when all previous/following stops are cancelled. They used to return
+      sched_route_pre / sched_route_post instead of an empty list in this case.
+
 Travel::Status::DE::IRIS 1.32 - Thu Aug 22 2019
 
     * Travel::Status::DE::IRIS::Stations: Add geocoordinates fo some swiss
